--- a/index.html
+++ b/index.html
@@ -194,18 +194,22 @@ const BALLOONS = ['', '', '', '', '']; // kamu bisa isi gambar balloon URLs, els
 const GIF_SRC = 'https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif'; // contoh
 const VIDEO_SRC = 'https://www.w3schools.com/html/mov_bbb.mp4'; // contoh
 const PAGES = [
-  'Halaman 1 — Hai, ini halaman pertama 💌',
-  'Halaman 2 — Makasih udah buka buku ini 🤍',
-  'Halaman 3 — Setiap lembar punya arti sendiri...',
-  'Halaman 4 — Cerita kecil yang aku tulis buat kamu 🌷',
-  'Halaman 5 — Jangan lupa senyum hari ini ya 😚',
-  'Halaman 6 — Kadang hal sederhana bisa bikin bahagia ✨',
-  'Halaman 7 — Aku cuma mau bilang makasih ❤️',
-  'Halaman 8 — Kamu istimewa, tau? 💞',
-  'Halaman 9 — Sedikit lagi sampai akhir...',
-  'Halaman 10 — Terima kasih udah baca sampai sini 🫶'
+  'Halaman 1 — HBD Nggaaa!!
+
+Sepuranee yoo nk misalee aku cuma iso ngekeki ikii... tapi aku gawe link iki yo smpe meh 2 bulan (itung2 mendalami neh pelajaranku TKJ. 
+
+Nk ws dewasa ngeneki koyone yo nk doano wong ki ws ga selalu tentang ngonoki yo, pokoee doa ku mugo2 awmu yoo dikei sehat ae si + awmu iso seneng terus, bahagia terus, opo nk mo karepne ki iso terkabul, iso gapai opo nk mbo cita citanoo, masyoo aku ngerti berproses iku butuh waktu cukup lamaa, tapi semangatt aee yoo lagek 20 tahun kannn isih ono waktuu gawe berproses, terus sing paling pentingg!!? Ojo mikir aneh2 wae op neh hal sg mestine ga mo pikir... Yo intine iku sih pokoee opo sg mo semogakan semoga tersemogakan doa sg lianee hanya allah yang tauu wkwkw.
+',
+  'Halaman 2 — Soal aku mbe awmu... aku yo sepuranee misalee awmu ngiro nk aku ki main2 mbe awmu toh pie toh ndadino awmu pie pie (IKU SALAH BESAR) aku ngempet eh tenan mentolo awmu ki lehe mikir ttg aku ki terus aku yo sepurane nk menurutmu aku ikii ga mbaturi prosesmu toh pie jujurr aku gak ngerti sg mo maksud menemani proses ki pie aku gak ngertii, nk soall realistis ae menemani proses tak roso nk sekedar cht2an iku dudu menemani proses sih yo bukanee aku gak gelem tapi aku ki moh ganggu awmu cahh nk misale menemani proses corone ngono jenenge ganggu kan? tapi nk soal meneng2an aku mbendino yo doa no awmu trs sg apik2 mungkin secara realistis aku ketoe ga mbaturi awmu tp aku berusaha mbaturi awmu lewat doa, tak pasrahno kabeh mbe allah iku ae.
+',
+  'Halaman 3 — Akuu ngerti prosesmu suwe, prosesmu yo gak gampangg, podoo aku pun isih berproses, kadangg aku ki yo pgn ngono kyo critoo mbe awmu yo ttg opo ae tp aku ngroso kyo iku jenenge malah ngeganggu proses mu, nk awmu njaluk aku ngenteni awmu gpp tak entenii smpe prosesmu bener bener bar, nk awmu mikir aku bakal ngeliyo? gak sama sekali... aku ws nyeritano awmu nk wong tuwoku mbe nk adekku smpe adekku mbendino mbedo aku gawe jenengmu, tak kiroo kene ws dewasa kann? dadii nk trimo hubungan ecek2 tok ki buang2 waktu, nk pancenee kene podo2 tenanan e yo menisan wae, dikuati doa mbe sak ananee... aku ki tipikal wong sg nk nduwe ati karo wong ki gatau crito mbe wong tuwo... tp tk pikir nk aku ws yakin ambee atiku dewe knp ogak aku yo ws dewasaa gak kudu dolanan ati neh. 
+',
+  'Halaman 4 — Sko penjelasanku iki mugo2 awmu yo iso ngerti, sementara iki awmu gausah mikir ttg iki sg penting awmu ngerti dan ws lereni mikir aneh2 ttg akuu, nk aku di cdk i loo mesti sg tak kirim nomermu, tk kon ngchat awmu ae langsung aku ws mls basa basi mls terlalu ngerespon hal sg buang2 waktu, tag2an mu nk IG y ws tak gwe setahun iki gak tak hapus blass. Saikii kene podo2 mikir sek carane bahagiano wong tuwo sekk, aku yoo pgn bahagiano wong tuwoku mbe adek2ku, nk mslh ak kdg idep2 kgn awmu ki yoo mesti ono manusiawi lh kan aku y duwe ati tp yo ky yowes lah. 
+',
+  'Halaman 5 — Aku dewe yo drg se sempurna iku isih akeh kurangee, kene fokus memperbaiki diri sek yoo, nk suatu saat kenee iso ketemu neh yo alhamdulillah, aku ttp ngenteni awmu tenang ae, tp misale awmu ws duwe sg luweh apik yo gpp, tapi awmu ngomong yo nk aku ojo meneng ae mbeno aku ga berharap dewean... soale ngelalino wong nk ws kadung seneng iku angel. Nk misaleee kene pancen ws dalane mesti dipertemuno neh kok. yowes iku ae siii intinee semangaatt terus yooo... I want you be finee!',
+
 ];
-const END_TEXT = 'Terima kasih — ganti teks di EDITABLE VARIABLES';
+const END_TEXT = 'Lovee uuuuu';
 /* ===== END EDITABLE ===== */
 
 /* apply assets */
