--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <div class="page"><h2>Halaman 1 — Hai, ini halaman pertama 💌</h2></div>
   <div class="page"><h2>Halaman 2 — Makasih udah buka buku ini 🤍</h2></div>
   <div class="page"><h2>Halaman 3 — Setiap lembar punya arti sendiri...</h2></div>
-  <div class="page"><h2>Halaman 4 — Nanti kamu isi sendiri yaa~</h2></div>
+  <div class="page"><h2>Halaman 4 — Nanti kamu isi sendiri yaa oke~</h2></div>
   <div class="page"><h2>Halaman 5 — 🌷</h2></div>
   <div class="page"><h2>Halaman 6</h2></div>
   <div class="page"><h2>Halaman 7</h2></div>
