--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
 <!-- ========== FLIPBOOK MARKUP (UNCHANGED) ========== -->
 <div id="overlayStage">
   <div class="book" id="book" aria-hidden="true" style="display:none">
-    <div class="page"><h2>Halaman 1 — Hai, ini halaman pertama 💌</h2></div>
-    <div class="page"><h2>Halaman 2 — Makasih udah buka buku ini 🤍</h2></div>
+    <div class="page"><h2>Halaman 1 — Flipbook</h2></div>
+    <div class="page"><h2>Halaman 2 — Hbd Nggaaaa, maaf yoo aku cuma iso ngekeki ikii, aku ga ngerti op nk mo senengii aku yo bingung pe ngekeki opoo, waktune brg mepeett, aku gawe link iki yoo gawe coding an smpe 2 bulanan aku sebenere drg diwarai coding nk TKJ yo cuma sekilas, ddi aku belajar dewe ddi spurane nk rondok rajelas link e, mugo2 awmu senengg yooo... Aku ngekeki hoodie iki yo mergo awmu kann sering omong akuu nk awamu sering hanyeben dadii aku ngekekii hoodie ikii gawe awmuu oh nk mungkin awmu ws duwe hoodie liyo toh misale iki mirip karo nggonmu sepurane tp vibes e jelas bedaa kan dari akuuu kannn😋</h2></div>
     <div class="page"><h2>Halaman 3 — Setiap lembar punya arti sendiri...</h2></div>
     <div class="page"><h2>Halaman 4 — Nanti kamu isi sendiri yaa~</h2></div>
     <div class="page"><h2>Halaman 5 — 🌷</h2></div>
