--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
   .page.flipped{ transform: rotateY(-180deg); z-index:0; }
 
   /* cover */
-  .page .cover { font-family: 'Dancing Script', cursive; font-size:34px; text-align:center; margin-top:20%; color:#5a3f2f; }
+  .page .cover { font-family: 'Bree Serif', cursive; font-size:50px; text-align:center; margin-top:20%; color:#5a3f2f; }
 
   /* diary text style */
   .page .text p {
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Bree Serif', cursive;
     font-size:18px;
     line-height:1.6;
     color:#4b3d33;
@@ -234,7 +234,7 @@ const BALLOON_5 = '';
 const FINGER_IMG = ''; // contoh: 'https://raw.githubusercontent.com/.../finger.png'
 const MUSIC_LABEL = 'Sempurna (ganti)';
 const MUSIC_SRC = '';
-const END_TEXT = 'Terima kasih — ganti teks di variabel END_TEXT';
+const END_TEXT = 'Hoodienya jangan lupa dipakee yaaa';
 /* ===== END ===== */
 
 /* apply editable assets */
