--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
   .page.flipped{ transform: rotateY(-180deg); z-index:0; }
 
   /* cover */
-  .page .cover { font-family: 'Bree Serif', cursive; font-size:50px; text-align:center; margin-top:20%; color:#5a3f2f; }
+  .page .cover { font-family: 'Bree Serif', cursive; font-size:100px; text-align:center; margin-top:20%; color:#5a3f2f; }
 
   /* diary text style */
   .page .text p {
     font-family: 'Bree Serif', cursive;
-    font-size:18px;
+    font-size:30px;
     line-height:1.6;
     color:#4b3d33;
     margin:0 0 14px 0;
@@ -115,7 +115,7 @@
 <!-- Fingerprint modal -->
 <div id="fingerModal" class="modal" role="dialog" aria-modal="true">
   <h3>Verifikasi Sidik Jari</h3>
-  <p>Tahan gambar sidik jari beberapa detik untuk melanjutkan</p>
+  <p>Tahan sidik jari beberapa detik untuk melanjutkan</p>
   <div class="finger-area">
     <img id="fingerImg" src="" alt="fingerprint">
     <div class="finger-progress"><i id="fingerFill"></i></div>
