--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Flipbook Syaa 💌</title>
+<title>Flipbook</title>
 
 <!-- handwriting font -->
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
@@ -66,12 +66,12 @@
   .page.flipped{ transform: rotateY(-180deg); z-index:0; }
 
   /* cover */
-  .page .cover { font-family: 'Bree Serif', cursive; font-size:100px; text-align:center; margin-top:20%; color:#5a3f2f; }
+  .page .cover { font-family: 'Poppins', cursive; font-size:200px; text-align:center; margin-top:20%; color:#5a3f2f; }
 
   /* diary text style */
   .page .text p {
-    font-family: 'Bree Serif', cursive;
-    font-size:30px;
+    font-family: 'Poppins', cursive;
+    font-size:50px;
     line-height:1.6;
     color:#4b3d33;
     margin:0 0 14px 0;
@@ -109,7 +109,7 @@
   <h2>Masukkan sandi 💌</h2>
   <input id="pwdInput" type="password" placeholder="Masukkan sandi">
   <div style="margin-top:12px"><button id="pwdNext" class="btn">Lanjut</button></div>
-  <div id="pwdError" style="display:none;color:#d04b4b;margin-top:8px">Kata sandi salah 😭</div>
+  <div id="pwdError" style="display:none;color:#d04b4b;margin-top:8px">Kata sandi salah</div>
 </div>
 
 <!-- Fingerprint modal -->
