--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Flipbook — HTS</title>
+<title>Flipbook</title>
 
 <!-- Bree Serif -->
 <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
   const BG_IMAGE = '';        // contoh: 'assets/bg.jpg' (kosong = cream background)
   const BALLOON_SRC = '';     // contoh: 'assets/balloon.png' (satu file dipakai untuk semua balon)
   const MUSIC_SRC = '';       // contoh: 'assets/music.mp3' (kosong = no music)
-  const FINAL_POPUP_TEXT = 'Terima kasih sudah membaca 💖 (ganti di variabel FINAL_POPUP_TEXT)';
+  const FINAL_POPUP_TEXT = 'Jangan lupa dipakee hoodie nee, Stay Safee❤';
 </script>
 
 <style>
